# Mod-Master

./: .gitignore  README.md  pyproject.toml  start.bat
src/modmaster/: __main__.py  config.py  main.py  prompts.py
src/modmaster/agents/: TaskAgent.py
