[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modmaster"
version = "0.0.1"
description = "ModMaster - 基于LangChain的智能应用"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mingyu Chen", email = "1269596929@qq.com" }
]
license = { text = "MIT" }
keywords = ["langchain", "llm", "ai", "zhipuai", "minecraft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain >=0.2.0",
    "langchain-community >=0.2.0",
    "langchain-text-splitters >=0.2.0",
    "langgraph >=0.1.0",
    "configparser >=7.0.0",
    "zhipuai >=2.0.0",
]

[project.urls]
Homepage = "https://github.com/cpearl0/modmaster"
Repository = "https://github.com/cpearl0/modmaster"
Issues = "https://github.com/cpearl0/modmaster/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "modmaster",
]

[tool.setuptools.package-data]
modmaster = [
    "configs/*.ini",
]

[project.scripts]
modmaster = "modmaster.cli:main"
